tests/samples/negative/generics/operator_unconstrained.ax
module operator_unconstrained;

fn add<T>(a: T, b: T) -> T {
    return a + b;
}

fn main() -> i32 {
    return add(1, 2);
}
